# appindicator-collection

./: Makefile.am  README.md  autogen.sh  configure.ac
common/: Makefile.am  app-indicator.c  app-indicator.h  appindicator.c  appindicator.h  common.c  common.h  hash-mapping.c  hash-mapping.h  icon-stub.c  icon-stub.h
indicators/: Makefile.am  activate.c  electron.c  gajim.c  hexchat.c  systray.c  telegram.c
tools/: libappindicator-activate.patch  sni-print
